sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:15: error: not found: value i
		i=0
                ^AlgCombSort:16: error: not found: value i
		while(i+ecart < lrg)
                      ^AlgCombSort:18: error: not found: value i
	 		if (plusPetit(i,i+ecart))
                                      ^AlgCombSort:20: error: not found: value i
	 			echange(i,i+ecart);
                                        ^AlgCombSort:23: error: not found: value i
	 		i+=1;
                        ^